kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: portfolio-deploy
spec:
  replicas: 2
  selector:       
    matchLabels:
      app: portfolio
  template:
    metadata: 
      labels: 
        app: portfolio
    spec:  
      containers:
        - name: portfolio
          image: portfolio:latest   
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
