kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
    - host: portfolio.akilan.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: portfolio 
                port: 
                  number: 80
